[gd_scene load_steps=40 format=2]

[ext_resource path="res://Scripts/GameController.gd" type="Script" id=1]
[ext_resource path="res://Images/fire_btn.png" type="Texture" id=2]
[ext_resource path="res://Images/arrow.png" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://SFX/Laser_Shoot7.wav" type="AudioStream" id=5]
[ext_resource path="res://fonts/Mister Pixel Regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Images/Layers/Layer_0010_1.png" type="Texture" id=7]
[ext_resource path="res://Images/BG_02.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Parallax.gd" type="Script" id=9]
[ext_resource path="res://Images/stars_bg.png" type="Texture" id=10]
[ext_resource path="res://SFX/bgm.wav" type="AudioStream" id=11]
[ext_resource path="res://SFX/Powerup.wav" type="AudioStream" id=12]
[ext_resource path="res://Images/Pink_Gradient.png" type="Texture" id=13]
[ext_resource path="res://Scripts/ScreenShake.gd" type="Script" id=14]
[ext_resource path="res://Images/UI/Health_01.png" type="Texture" id=15]
[ext_resource path="res://SFX/health.wav" type="AudioStream" id=16]
[ext_resource path="res://fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=17]
[ext_resource path="res://Nodes/Enemy.tscn" type="PackedScene" id=18]
[ext_resource path="res://Images/UI/Health_02.png" type="Texture" id=19]
[ext_resource path="res://Images/UI/Health_04.png" type="Texture" id=20]
[ext_resource path="res://Images/UI/Health_03.png" type="Texture" id=21]
[ext_resource path="res://Images/UI/Empty_Health.png" type="Texture" id=22]
[ext_resource path="res://Images/UI/Full_Health.png" type="Texture" id=23]
[ext_resource path="res://Nodes/crazy_path.tscn" type="PackedScene" id=24]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 2

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment(){
	COLOR = texture(TEXTURE,UV);
	COLOR.rgba = COLOR.rgba * vec4(0,0,0,0.12);
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 4

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 190.69, 306.174 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.337255, 0.847059, 0.372549, 1 )
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.235294, 0.231373, 0.231373, 0 )
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 47, 5 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 47, 5 )

[sub_resource type="BitmapFont" id=10]

[sub_resource type="AnimatedTexture" id=11]
frames = 4
fps = 10.0
frame_0/texture = ExtResource( 15 )
frame_1/texture = ExtResource( 19 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 21 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 20 )
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 6 )

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 2

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.117647, 0.105882, 0.105882, 1 )

[sub_resource type="DynamicFont" id=15]
size = 15
extra_spacing_space = 2
font_data = ExtResource( 17 )

[node name="Root" type="Control"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 1 )
health_label = NodePath("Control/MarginContainer/header/health")
score_label = NodePath("Control/MarginContainer/header/score")
health_progress_path = NodePath("Control/health_progress")
announcement_lbl_path = NodePath("Control/center_container/announcement_panel/announcement")
announcement_panel_path = NodePath("Control/center_container/announcement_panel")
heart_container_path = NodePath("Control/MarginContainer/header")

[node name="ScreenShake" type="Node2D" parent="Camera2D"]
script = ExtResource( 14 )
cam = NodePath("..")

[node name="Fire_button" type="Button" parent="Camera2D"]
visible = false
margin_left = 39.6079
margin_top = 113.414
margin_right = 83.6079
margin_bottom = 151.414
toggle_mode = true
shortcut_in_tooltip = false
icon = ExtResource( 2 )
flat = true
clip_text = true

[node name="left" type="Button" parent="Camera2D"]
visible = false
margin_left = -66.6916
margin_top = 96.8729
margin_right = -22.6916
margin_bottom = 134.873
toggle_mode = true
shortcut_in_tooltip = false
icon = ExtResource( 3 )
flat = true
clip_text = true

[node name="right" type="Button" parent="Camera2D"]
visible = false
margin_left = 21.1404
margin_top = 134.816
margin_right = 65.1404
margin_bottom = 172.816
rect_rotation = 180.0
toggle_mode = true
shortcut_in_tooltip = false
icon = ExtResource( 3 )
flat = true
clip_text = true

[node name="up" type="Button" parent="Camera2D"]
visible = false
margin_left = -4.23397
margin_top = 71.5579
margin_right = 39.766
margin_bottom = 109.558
rect_rotation = 90.0
toggle_mode = true
shortcut_in_tooltip = false
icon = ExtResource( 3 )
flat = true
clip_text = true

[node name="down" type="Button" parent="Camera2D"]
visible = false
margin_left = -41.7323
margin_top = 160.427
margin_right = 2.26773
margin_bottom = 198.427
rect_rotation = -90.0
toggle_mode = true
shortcut_in_tooltip = false
icon = ExtResource( 3 )
flat = true
clip_text = true

[node name="overlay" type="Sprite" parent="Camera2D"]
material = SubResource( 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 13 )

[node name="Player" parent="Camera2D" instance=ExtResource( 4 )]
position = Vector2( 0, 150 )

[node name="movement" type="AudioStreamPlayer" parent="Camera2D/Player"]
mix_target = 2

[node name="shot" type="AudioStreamPlayer" parent="Camera2D/Player"]
stream = ExtResource( 5 )
mix_target = 2

[node name="bgm" type="AudioStreamPlayer" parent="Camera2D/Player"]
stream = ExtResource( 11 )
autoplay = true
mix_target = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
material = SubResource( 3 )
motion_mirroring = Vector2( 1, 1458 )
script = ExtResource( 9 )

[node name="bg" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 8 )
centered = false

[node name="NightSky" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_mirroring = Vector2( 1024, 1024 )
script = ExtResource( 9 )

[node name="Space" type="Sprite" parent="Camera2D/ParallaxBackground/NightSky"]
modulate = Color( 1, 1, 1, 0.486275 )
material = SubResource( 4 )
texture = ExtResource( 10 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1024, 1 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer4"]
position = Vector2( 7.59375, -182.25 )
z_as_relative = false
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 244, 56, 0, 0 )

[node name="heading" type="Label" parent="Camera2D"]
visible = false
margin_left = 62.1611
margin_top = 41.3519
margin_right = 135.161
margin_bottom = 55.3519
text = "Game Over"

[node name="MusicManager" type="Node2D" parent="Camera2D"]

[node name="Fire_area" type="Area2D" parent="Camera2D"]
visible = false

[node name="fire" type="CollisionShape2D" parent="Camera2D/Fire_area"]
visible = false
position = Vector2( 152.802, -5.60253 )
shape = SubResource( 5 )

[node name="swipe_area" type="Area2D" parent="Camera2D"]

[node name="swipe" type="CollisionShape2D" parent="Camera2D/swipe_area"]
position = Vector2( 4, 2 )
shape = SubResource( 5 )

[node name="Accelerate_area" type="Area2D" parent="Camera2D"]
visible = false

[node name="accelerate" type="CollisionShape2D" parent="Camera2D/Accelerate_area"]
position = Vector2( -156.67, 1.80081 )
shape = SubResource( 5 )

[node name="powerup" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource( 12 )

[node name="health" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource( 16 )

[node name="powerup_container" type="Node2D" parent="Camera2D"]

[node name="enemy_container" type="Node2D" parent="Camera2D"]

[node name="Control" type="Control" parent="Camera2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -201.0
margin_right = 120.0
margin_bottom = 204.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerupEnergy" type="ProgressBar" parent="Camera2D/Control"]
visible = false
margin_left = 11.2787
margin_top = 331.131
margin_right = 217.279
margin_bottom = 345.131
rect_rotation = -90.0
rect_scale = Vector2( 1, 0.2 )
mouse_filter = 2
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
value = 30.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="powerup_timer" type="Timer" parent="Camera2D/Control/PowerupEnergy"]
wait_time = 0.1

[node name="health_progress" type="ProgressBar" parent="Camera2D/Control"]
margin_right = 120.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
step = 20.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart" type="TextureRect" parent="Camera2D/Control/health_progress"]
margin_left = -8.0
margin_top = -6.0
margin_right = 9.0
margin_bottom = 19.0
rect_scale = Vector2( 1.5, 1.5 )
texture = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/Control"]
anchor_right = 0.5
margin_right = 120.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="HBoxContainer" parent="Camera2D/Control/MarginContainer"]
margin_right = 240.0
margin_bottom = 20.0
alignment = 2

[node name="heart" type="TextureRect" parent="Camera2D/Control/MarginContainer/header"]
visible = false
margin_left = 82.0
margin_right = 99.0
margin_bottom = 25.0
texture = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart2" type="TextureRect" parent="Camera2D/Control/MarginContainer/header"]
visible = false
margin_left = 103.0
margin_right = 120.0
margin_bottom = 25.0
texture = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart3" type="TextureRect" parent="Camera2D/Control/MarginContainer/header"]
visible = false
margin_left = 124.0
margin_right = 141.0
margin_bottom = 25.0
texture = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart4" type="TextureRect" parent="Camera2D/Control/MarginContainer/header"]
visible = false
margin_left = 145.0
margin_right = 162.0
margin_bottom = 25.0
texture = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart5" type="TextureRect" parent="Camera2D/Control/MarginContainer/header"]
visible = false
margin_left = 166.0
margin_right = 183.0
margin_bottom = 25.0
texture = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="Camera2D/Control/MarginContainer/header"]
visible = false
margin_left = 161.0
margin_top = 1.0
margin_right = 183.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 12 )
text = "100"

[node name="score" type="Label" parent="Camera2D/Control/MarginContainer/header"]
margin_left = 187.0
margin_top = 1.0
margin_right = 240.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 12 )
text = "Score:0"

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Control/MarginContainer"]
visible = false
margin_right = 240.0
margin_bottom = 20.0
__meta__ = {
"_edit_lock_": true
}

[node name="HSlider" type="HSlider" parent="Camera2D/Control/MarginContainer/VBoxContainer"]
visible = false
margin_right = 240.0
margin_bottom = 16.0

[node name="Panel" type="Panel" parent="Camera2D/Control"]
visible = false
margin_right = 219.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center_container" type="MarginContainer" parent="Camera2D/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.64
margin_top = -10.0
margin_right = 137.64
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="announcement_panel" type="Panel" parent="Camera2D/Control/center_container"]
material = SubResource( 13 )
margin_right = 275.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 14 )

[node name="announcement" type="Label" parent="Camera2D/Control/center_container/announcement_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.5
margin_top = -8.0
margin_right = 122.5
margin_bottom = 9.0
custom_fonts/font = SubResource( 15 )
text = "In a galaxy far far away "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Camera2D"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="path" parent="Camera2D" instance=ExtResource( 24 )]
visible = false
position = Vector2( -3, -176 )

[node name="Enemy" parent="Camera2D/path/PathFollow2D" index="0" instance=ExtResource( 18 )]
position = Vector2( -0.0625763, -0.389984 )
[connection signal="button_down" from="Camera2D/Fire_button" to="Camera2D/Player" method="fire"]
[connection signal="button_down" from="Camera2D/left" to="Camera2D/Player" method="fire"]
[connection signal="button_down" from="Camera2D/right" to="Camera2D/Player" method="fire"]
[connection signal="button_down" from="Camera2D/up" to="Camera2D/Player" method="fire"]
[connection signal="button_down" from="Camera2D/down" to="Camera2D/Player" method="fire"]
[connection signal="input_event" from="Camera2D/Fire_area" to="Camera2D/Player" method="_on_Fire"]
[connection signal="input_event" from="Camera2D/Accelerate_area" to="Camera2D/Player" method="_on_Accelerate"]
[connection signal="timeout" from="Camera2D/Control/PowerupEnergy/powerup_timer" to="Camera2D" method="_on_powerup_timer_timeout"]
[connection signal="value_changed" from="Camera2D/Control/MarginContainer/VBoxContainer/HSlider" to="Camera2D/ParallaxBackground/NightSky" method="_on_HSlider_value_changed"]
[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="check_powerup"]
[connection signal="tween_all_completed" from="Camera2D/Tween" to="Camera2D" method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Camera2D/Tween" to="Camera2D" method="_on_Tween_tween_completed"]

[editable path="Camera2D/path"]
